--- a/contact_me.html
+++ b/contact_me.html
@@ -11,7 +11,7 @@
     <ul>
         <li><strong>Email</strong>: aochen@pku.edu.cn</li>
         <li><strong>Phone Number</strong>: (+86) 18811771184</li>
-        <li><strong>Linkedin</strong>:<a href="https://www.linkedin.com/in/aochen-liu-ba7089220/"> Aochen's Profile</a></li>
+        <li><strong>LinkedIn</strong>:<a href="https://www.linkedin.com/in/aochen-liu-ba7089220/"> Aochen's Profile</a></li>
 
     </ul>
     <form class="" action="mailto:aochen@pku.edu.cn" method="post" enctype="text/plain">
